name:                pml-graphit
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pml-graphit#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-tools:   ghc >= 7.0

  default-language:
                   Haskell2010
  hs-source-dirs:  src

  exposed-modules: Formal.PML.GraphOptions
                 , Formal.PML.Print
                 , Formal.PML.PrintBasic
                 , Formal.PML.PrintDot
                 , Formal.PML.PrintUML
                 , Formal.PML.Subtree

  build-depends:       base >= 4.7 && < 5
                     , array
                     , mtl
                     , pandoc
                     , pml-bnfc


executable pml-graphit
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , cmdargs
                     , mtl
                     , pandoc
                     , pml-bnfc
  other-modules: Formal.PML.GraphOptions
    , Formal.PML.Print
    , Formal.PML.PrintBasic
    , Formal.PML.PrintDot
    , Formal.PML.PrintUML
    , Formal.PML.Subtree
